--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'http://localhost:1313/'
+baseURL: 'https://blog.xandilabs.uk/'
 languageCode: 'en-us'
 title: "Xandi's blog"
 theme: 'PaperMod'
