refactor: update base url to new domain

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://blog.xandilabs.uk/'
+baseURL: 'https://blog.atbender.com/'
 languageCode: 'en-us'
 title: "Xandi's blog"
 theme: 'PaperMod'
